@@ -1,4 +1,5 @@
 - Fix excluding a bridge
+- Allow to call helpers from dynamic_parameters proc
 
 = 3.4.20
 - Update tinymce bridge for tinyMCE 4.x
